# bot-banter

./: .gitignore  .golangci.yml  README.md  default.nix  go.mod  go.sum
.github/workflows/: ci.yaml
gobot/: const.go  history.go  jetstream.go  llm.go  main.go  prompts.go
gobot/jet/: jet.go  jetstream.go  reader.go  stream.go  writer.go
gobot/llm/: history.go  llm.go
gobot/tts/: buffer.go  tts.go
rustbot/: Cargo.toml
rustbot/src/: audio.rs  buffer.rs  cli.rs  history.rs  jet.rs  jetstream.rs  llm.rs  main.rs  prelude.rs  signal.rs  tts.rs
