[package]
name = "rustbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = { version = "0.34", features = ["service"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
serde_json = "1.0.82"
serde = "1.0.139"
rand = "0.8"
